Introduce support to override connector dependencies in descriptor.yml